--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.5.24306.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.5.24306.3">
@@ -15,8 +16,37 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.5.24306.3" />
+        <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="xunit.assert" Version="2.5.3" />
+        <PackageReference Include="xunit.extensibility.core" Version="2.5.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Project.Tests\obj\project.assets.json" />
+      <_ContentIncludedByDefault Remove="Project.Tests\obj\project.packagespec.json" />
+      <_ContentIncludedByDefault Remove="Project.Tests\obj\Project.Tests.csproj.nuget.dgspec.json" />
+      <_ContentIncludedByDefault Remove="Project.Tests\bin\Debug\net8.0\MvcTestingAppManifest.json" />
+      <_ContentIncludedByDefault Remove="Project.Tests\bin\Debug\net8.0\Project.Tests.deps.json" />
+      <_ContentIncludedByDefault Remove="Project.Tests\bin\Debug\net8.0\Project.Tests.runtimeconfig.json" />
+      <_ContentIncludedByDefault Remove="Project.Tests\obj\Debug\net8.0\MvcTestingAppManifest.json" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Project.Tests\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Project.Tests\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="Project.Tests\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Project.Tests\**" />
     </ItemGroup>
 
 </Project>
